--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awesome Javascript Quiz</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
-    <h1 class="center">Javascript Quiz</h1>
     <!--begin header-->
-    <header>        
-       
-        </div>         
+    <header>
+        <h1 class="center">Javascript Quiz</h1>
+
     </header>
     <main>
-        <div class="start_btn"><button>Start Quiz</button></div>
+        <div class="start-btn"><button>Start Quiz</button></div>
+        <div class="countdown" id="timer"></div>
+        <section class="questionsArr">
+            <h2 id="question"></h2>
+            <div>
+                <p class= "Choices">              
+                </p>
+            </div>
+        </section>
 
     </main>
-    
 
-<script src="script.js"></script>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
