--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
         <section class="questionsArr">
             <h2 id="question"></h2>
             <div>
-                <p class= "Choices">              
+                <p class= "choice1" onclick="checkanswer(event)">              
                 </p>
+                <p class= "choice2"onclick="checkanswer(event)">              
+                </p>
+                <p class= "choice3"onclick="checkanswer(event)">              
+                </p>
+                <p class= "choice4"onclick="checkanswer(event)">              
+                </p>
+                
             </div>
         </section>
 
