added formating to timer, h2 and choices in css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="countdown" id="timer"></div>
         <section class="questionsArr">
             <h2 id="question"></h2>
-            <div>
+            <div class="choices">
                 <p class= "choice1" onclick="checkanswer(event)">              
                 </p>
                 <p class= "choice2"onclick="checkanswer(event)">              
